# VyroEngine

./: .gitignore  CMakeLists.txt  README.md  V1.md  V2.md  V3.md  V4.md  V5.md  V6.md
assets/models/: README.md
assets/shaders/: model.frag  model.vert
docs/: AGENT_HANDOFF.md  ROADMAP_V10.md  ROADMAP_V2.md  ROADMAP_V3.md  ROADMAP_V4.md  ROADMAP_V5.md  ROADMAP_V6.md  ROADMAP_V7.md  ROADMAP_V8.md  ROADMAP_V9.md  build_paper.py
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/vyro/ai/: Steering.hpp
engine/include/vyro/animation/: AnimationClip.hpp  Blend.hpp  CycleVariation.hpp  StateMachine.hpp
engine/include/vyro/assets/: AssetHandle.hpp  AssetManager.hpp  GlbLoader.hpp  Image.hpp  Mesh.hpp  ObjLoader.hpp  SkinnedModel.hpp
engine/include/vyro/audio/: AudioClip.hpp  AudioDevice.hpp  AudioEngine.hpp  AudioFile.hpp  SoundSynth.hpp  Spatial.hpp
engine/include/vyro/core/: Engine.hpp  EventBus.hpp  FrameStats.hpp  Log.hpp  Profiler.hpp  Random.hpp  Types.hpp  Version.hpp
engine/include/vyro/ecs/: ComponentStorage.hpp  Entity.hpp  EntityManager.hpp  Registry.hpp  System.hpp  SystemManager.hpp
engine/include/vyro/editor/: AssetBrowser.hpp  EditorContext.hpp  Gizmo.hpp  Inspector.hpp
engine/include/vyro/game/: BossPhase.hpp  BossSchedule.hpp  Buffs.hpp  Combo.hpp  Difficulty.hpp  Economy.hpp  GameFlow.hpp  Hazard.hpp  Medals.hpp  MenuState.hpp  Pickup.hpp  RunStats.hpp  SaveData.hpp  Upgrades.hpp  WavePlan.hpp  Weapon.hpp  WeaponUnlock.hpp
engine/include/vyro/math/: Mat4.hpp  Vec.hpp
engine/include/vyro/memory/: Align.hpp  ArenaAllocator.hpp  FreeListAllocator.hpp  PoolAllocator.hpp  StackAllocator.hpp
engine/include/vyro/net/: Coop.hpp  CoopState.hpp  Replication.hpp  Transport.hpp  UdpTransport.hpp
engine/include/vyro/physics/: Collision.hpp  Constraint.hpp  PhysicsDebug.hpp  PhysicsWorld.hpp  RigidBody.hpp
engine/include/vyro/platform/: Input.hpp  KeyCode.hpp  Window.hpp
engine/include/vyro/render/: Batch.hpp  Camera.hpp  CameraRig.hpp  FrameGraph.hpp  Frustum.hpp  Instancing.hpp  NullDevice.hpp  OpenGLDevice.hpp  PBR.hpp  ParticleSystem.hpp  PostProcess.hpp  RHI.hpp  Renderer.hpp  Renderer2D.hpp  Renderer3D.hpp  Shader.hpp  TextGeometry.hpp  Texture.hpp  VulkanDevice.hpp
engine/include/vyro/scene/: Scene.hpp  SceneManager.hpp  SceneSerializer.hpp
engine/include/vyro/scripting/: LuaScriptEngine.hpp  ScriptEngine.hpp  ScriptHost.hpp
engine/src/animation/: AnimationClip.cpp  StateMachine.cpp
engine/src/assets/: AssetManager.cpp  GlbLoader.cpp  Image.cpp  Mesh.cpp  ObjLoader.cpp  SkinnedModel.cpp
engine/src/audio/: AudioEngine.cpp  SoundSynth.cpp
engine/src/core/: Engine.cpp  EventBus.cpp  Log.cpp  Profiler.cpp
engine/src/ecs/: EntityManager.cpp  SystemManager.cpp
engine/src/editor/: AssetBrowser.cpp  EditorContext.cpp
engine/src/gl/: OpenGLDevice.cpp  Window.cpp
engine/src/lua/: LuaScriptEngine.cpp
engine/src/ma/: AudioDevice.cpp  AudioFile.cpp
engine/src/math/: Mat4.cpp
engine/src/memory/: ArenaAllocator.cpp  FreeListAllocator.cpp  StackAllocator.cpp
engine/src/net/: Replication.cpp  UdpTransport.cpp
engine/src/physics/: Collision.cpp  Constraint.cpp  PhysicsDebug.cpp  PhysicsWorld.cpp
engine/src/platform/: Input.cpp
engine/src/render/: Camera.cpp  FrameGraph.cpp  NullDevice.cpp  PBR.cpp  ParticleSystem.cpp  PostProcess.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  Shader.cpp  TextGeometry.cpp  Texture.cpp
engine/src/scene/: SceneManager.cpp  SceneSerializer.cpp
engine/src/scripting/: ScriptEngine.cpp  ScriptHost.cpp
engine/src/vk/: VulkanDevice.cpp
games/: CMakeLists.txt
games/vyrostrike/: main.cpp
rulz/: CODING_STANDARDS.md  COMMIT_AUTHORSHIP.md  CPP_STYLE.md  ECS_RULES.md  GIT_RULES.md  MEMORY_RULES.md  PERFORMANCE_RULES.md  RENDERING_RULES.md  SCRIPTING_RULES.md  SECURITY_RULES.md  TESTING_RULES.md
runtime/: CMakeLists.txt
runtime/src/: main.cpp
samples/: CMakeLists.txt
samples/bounce/: main.cpp
samples/model/: main.cpp
samples/vulkan/: main.cpp
samples/window/: main.cpp
tests/: CMakeLists.txt  test_advgfx.cpp  test_ai.cpp  test_animation.cpp  test_assets.cpp  test_audio.cpp  test_audio_device.cpp  test_audio_file.cpp  test_batch.cpp  test_bloom.cpp  test_boss.cpp  test_bossphase.cpp  test_buffs.cpp  test_camera.cpp  test_camera_rig.cpp  test_collision.cpp  test_combo.cpp  test_constraint.cpp  test_coop.cpp  test_coop_state.cpp  test_cycle_variation.cpp  test_difficulty.cpp  test_economy.cpp  test_editor.cpp  test_entity.cpp  test_eventbus.cpp  test_framestats.cpp  test_frustum.cpp  test_gameflow.cpp  test_glb.cpp  test_harness.hpp  test_hazard.cpp  test_image.cpp  test_input.cpp  test_instancing.cpp  test_log.cpp  test_lua.cpp  test_main.cpp  test_math.cpp  test_medals.cpp  (+34 more)
